# internal/entity/filter.go
@@ -1,0 +1,7 @@
+package entity
+
+type Filter struct {
+	Ingredients []*Ingredient `json:"ingredients"`
+	TimeBetween string        `json:"timeBetween"`
+	SortTime    string        `json:"sortTime"`
+}
