# internal/entity/identety.go
@@ -1,0 +1,6 @@
+package entity
+
+type Identity struct {
+	Login    string `json:"login"`
+	Password string `json:"password"`
+}
